gccida/c3/print_node_brief
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node_brief/src/print-tree.c:568:17: error: expected expression
if ( *( _OWORD *)&nodea->block.vars <= __PAIR128__( -1LL, 0LL) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node_brief/src/print-tree.c:568:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&nodea->block.vars <= __PAIR128__( -1LL, 0LL) ) 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node_brief/src/obj/print-tree.o] Error 1
